# telegram-bot-for-college

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
code/: Bot.py  DataBase.py  Debug.py  System.py
data/: Config.example.json  Config.json  Ping.example.json  Ping.json  Schedule.example.json  Schedule.json  Url.example.json  Url.json  lessons.example.json  lessons.json
docs/: code_description.md  data_description.md
